# aioyookassa

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  changelog.html  codecov.yml  contributing.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  pytest.ini  search.html  searchindex.js  sonar-project.properties
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto-release.yml  ci.yml  quality.yml  release.yml  sonarcloud.yml
_sources/: changelog.rst.txt  index.rst.txt
_sources/api-reference/: yookassa-client.rst.txt
_sources/examples/: basic-payment.rst.txt
_sources/getting-started/: best-practices.rst.txt  examples.rst.txt
aioyookassa/: __init__.py
aioyookassa/contrib/: __init__.py  webhook_server.py
aioyookassa/core/: __init__.py  client.py  payment_methods.py  payments.py  utils.py  webhook_handler.py  webhook_validator.py
aioyookassa/core/abc/: client.py
aioyookassa/core/api/: __init__.py  base.py  deals.py  invoices.py  payment_methods.py  payments.py  payouts.py  personal_data.py  receipts.py  refunds.py  sbp_banks.py  self_employed.py  webhooks.py
aioyookassa/core/methods/: __init__.py  base.py  deals.py  invoices.py  me.py  payment_methods.py  payments.py  payouts.py  personal_data.py  receipts.py  refunds.py  sbp_banks.py  self_employed.py  webhooks.py
aioyookassa/exceptions/: __init__.py  authorization.py  base.py  payments.py  webhooks.py
aioyookassa/types/: __init__.py  deals.py  enum.py  invoice.py  params.py  payment.py  payout.py  personal_data.py  receipt_registration.py  refund.py  sbp_banks.py  settings.py  webhook_notification.py  webhooks.py
api-reference/: index.html  payments-api.html  yookassa-client.html
docs/: changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  requirements.txt
docs/api-reference/: deals-api.rst  index.rst  invoices-api.rst  payment-methods-api.rst  payments-api.rst  payouts-api.rst  personal-data-api.rst  receipts-api.rst  refunds-api.rst  sbp-banks-api.rst  self-employed-api.rst  utils.rst  webhook-handler-api.rst  webhooks-api.rst  yookassa-client.rst
docs/examples/: advanced_payment_example.rst  basic-payment.rst  deals-example.rst  index.rst  payouts-example.rst  refunds_example.rst  webhooks-example.rst
docs/getting-started/: api-modules.rst  best-practices.rst  error-handling.rst  examples.rst  index.rst
docs/types/: deals.rst  enum.rst  index.rst  payment.rst  payout.rst  personal-data.rst  sbp-banks.rst  webhooks.rst
docs/wrappers/: index.rst
examples/: basic-payment.html  deals_example.py  index.html  payment_methods_example.py  payouts_example.py  personal_data_example.py  sbp_banks_example.py  self_employed_example.py  webhook_comparison.md  webhook_ready_server.py  webhook_standalone.py
getting-started/: api-modules.html  best-practices.html  error-handling.html  examples.html  index.html
test/: client.py  invoice_example.py  receipt_example.py  refund_example.py  test_numeric_types.py
tests/: conftest.py
tests/core/: __init__.py  test_abc_client.py  test_api_base_validation.py  test_api_deals.py  test_api_payments.py  test_api_payouts.py  test_api_personal_data.py  test_api_sbp_banks.py  test_api_self_employed.py  test_api_webhooks.py  test_client.py  test_methods_base.py  test_methods_deals.py  test_methods_payments.py  test_methods_payouts.py  test_methods_personal_data.py  test_methods_sbp_banks.py  test_methods_self_employed.py  test_methods_webhooks.py  test_utils.py  test_webhook_handler.py  test_webhook_validator.py
tests/exceptions/: __init__.py  test_authorization.py  test_base.py  test_payments.py  test_webhooks.py
tests/fixtures/: __init__.py  common.py
tests/types/: __init__.py  test_deals.py  test_enum.py  test_invoice.py  test_payment.py  test_payout.py  test_personal_data.py  test_receipt_registration.py  test_refund.py  test_sbp_banks.py  test_self_employed.py  test_webhook_notification.py  test_webhooks.py
types/: enum.html  index.html  payment.html
wrappers/: index.html
