[tool.poetry]
name = "aioyookassa"
version = "0.1.3"
description = "Asynchronous wrapper to interact with yookassa.ru API"
authors = ["Marple"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.10.2"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
