[tool.poetry]
name = "aioyookassa"
version = "0.1.6"
description = "Asynchronous wrapper to interact with yookassa.ru API"
authors = ["Marple"]
repository = "https://github.com/marple-git/aioyookassa"
documentation = "https://aioyookassa.readthedocs.io/en/latest/"
license = "MIT"
readme = 'README.md'

keywords = [
    "yookassa",
    "asyncio",
    "aiohttp",
    "pydantic",
    "aioyookassa"
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]


[tool.poetry.dependencies]
python = "^3.8"
pydantic = ">=2.0.0"
aiohttp = ">=3.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
